--- a/memoteca/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/memoteca/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -11,7 +11,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
-      [value]="pensamento.conteudo"
+      [(ngModel)]="pensamento.conteudo"
     >
 
     <label for="autoria">Autoria</label>
@@ -21,7 +21,7 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
-      [value]="pensamento.autoria"
+      [(ngModel)]="pensamento.autoria"
     >
 
     <label for="modelo">Selecione o modelo do card:</label>
@@ -33,6 +33,7 @@
             id="modelo1"
             value="modelo1"
             name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
           >
           <div class="custom-radio">
             <span></span>
@@ -54,11 +55,12 @@
             id="modelo2"
             value="modelo2"
             name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
           >
           <div class="custom-radio">
             <span></span>
           </div>
-          <span>Modelo 1</span>
+          <span>Modelo 2</span>
         </label>
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
@@ -75,11 +77,12 @@
             id="modelo3"
             value="modelo3"
             name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
           >
           <div class="custom-radio">
             <span></span>
           </div>
-          <span>Modelo 1</span>
+          <span>Modelo 3</span>
         </label>
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
@@ -92,7 +95,7 @@
 
     <div class="acoes">
       <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button class="botao">Cancelar</button>
+      <button (click)="cancelar()"class="botao">Cancelar</button>
     </div>
   </form>
 </section>
