--- a/memoteca/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/memoteca/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -94,8 +94,19 @@
     </div>
 
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button (click)="cancelar()"class="botao">Cancelar</button>
+      <button
+        (click)="criarPensamento()"
+        class="botao"
+      >
+        Salvar
+      </button>
+
+      <button
+        routerLink="/listarPensamento"
+        class="botao"
+      >
+        Cancelar
+      </button>
     </div>
   </form>
 </section>
