Listando com *ngFor

--- a/memoteca/src/app/componentes/listar-pensamento/listar-pensamento.component.html
+++ b/memoteca/src/app/componentes/listar-pensamento/listar-pensamento.component.html
@@ -7,5 +7,11 @@
       >
         Adicionar pensamento
       </button>
+
+      <div class="mural">
+        <div *ngFor="let pensamento of listarPensamentos">
+          <app-pensamento></app-pensamento>
+        </div>
+      </div>
   </header>
 </section>
